Pass build checks

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -108,6 +108,7 @@ importFrom(assertive,assert_is_tbl)
 importFrom(assertive,has_dims)
 importFrom(assertive,is_a_string)
 importFrom(basejump,assertFormalAnnotationCol)
+importFrom(basejump,assertHasRownames)
 importFrom(basejump,assertIsAStringOrNULL)
 importFrom(basejump,assertIsAnImplicitInteger)
 importFrom(basejump,assertIsCharacterOrNULL)
