--- a/NAMESPACE
+++ b/NAMESPACE
@@ -131,6 +131,7 @@ importFrom(dplyr,mutate)
 importFrom(dplyr,mutate_all)
 importFrom(dplyr,mutate_if)
 importFrom(dplyr,pull)
+importFrom(dplyr,select_if)
 importFrom(dplyr,ungroup)
 importFrom(grDevices,colorRampPalette)
 importFrom(knitr,kable)
