--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -38,7 +38,7 @@ Encoding: UTF-8
 LazyData: TRUE
 Depends:
     R (>= 3.4),
-    SummarizedExperiment (>= 1.6.5),
+    SummarizedExperiment (>= 1.8),
     basejump (>= 0.4)
 Imports:
     Biostrings,
@@ -56,15 +56,15 @@ Imports:
     methods,
     pheatmap (>= 1.0),
     rdrop2 (>= 0.8),
-    readr (>= 1.0),
-    rlang (>= 0.1),
+    readr (>= 1.1),
+    rlang (>= 0.2),
     scales,
     sessioninfo (>= 1.0),
-    stringr (>= 1.2),
+    stringr (>= 1.3),
     tibble (>= 1.4),
     tidyr (>= 0.8),
     utils,
-    viridis
+    viridis (>= 0.5)
 Suggests:
     BiocStyle,
     lintr,
@@ -73,7 +73,7 @@ Suggests:
     testthat,
     tidyverse
 Remotes:
-    steinbaugh/basejump@develop
+    steinbaugh/basejump
 biocViews: Infrastructure
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 6.0.1
