--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -38,7 +38,7 @@ Encoding: UTF-8
 LazyData: TRUE
 Depends:
     R (>= 3.4),
-    SummarizedExperiment (>= 1.8),
+    SummarizedExperiment,
     basejump (>= 0.4)
 Imports:
     Biostrings,
