--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,34 @@
-# R for travis
+# Travis-CI configuration for Bioconductor packages
 # https://docs.travis-ci.com/user/languages/r
 
 language: r
 cache: packages
-warnings_are_errors: true
-
-# Temporarily enable to cache R packages
-# script: true
-
-before_install:
-- openssl aes-256-cbc -K $encrypted_548ab35dca07_key -iv $encrypted_548ab35dca07_iv -in tests/testthat/token.rds.enc -out tests/testthat/token.rds -d
 
 r:
   - bioc-release
   - bioc-devel
+
+# blocklist
+branches:
+  except:
+  - develop
+
+before_install:
+- openssl aes-256-cbc -K $encrypted_548ab35dca07_key -iv $encrypted_548ab35dca07_iv -in tests/testthat/token.rds.enc -out tests/testthat/token.rds -d
+
+# r_build_args: "--no-build-vignettes"
+# r_check_args: "--no-vignettes"
+
+# Set true before submission to Bioconductor
+warnings_are_errors: true
+
+# Temporarily enable when caching Bioconductor packages
+# script: true
+
+notifications:
+  email:
+    on_success: change
+    on_failure: change
 
 r_packages:
   - covr
