--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -37,7 +37,7 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: TRUE
 Depends:
-    R (>= 3.5),
+    R (>= 3.6),
     SummarizedExperiment,
     basejump (>= 0.99)
 Imports:
@@ -60,18 +60,14 @@ Imports:
     rlang (>= 0.2),
     scales,
     sessioninfo (>= 1.0),
+    stats,
     stringr (>= 1.3),
     tibble (>= 1.4),
     tidyr (>= 0.8),
     utils,
     viridis (>= 0.5)
 Suggests:
-    BiocStyle,
-    lintr,
-    rmarkdown,
-    roxygen2,
-    testthat,
-    tidyverse
+    testthat (>= 2.0)
 Remotes:
     steinbaugh/basejump@develop
 biocViews: Infrastructure
