--- a/NAMESPACE
+++ b/NAMESPACE
@@ -64,13 +64,14 @@ exportMethods(sampleYAML)
 exportMethods(sampleYAMLMetadata)
 exportMethods(sampleYAMLMetrics)
 exportMethods(uniteInterestingGroups)
-import(S4Vectors)
-import(methods)
 importFrom(Biostrings,reverseComplement)
 importFrom(GenomeInfoDb,seqnames)
 importFrom(GenomicRanges,GRanges)
 importFrom(IRanges,IRanges)
 importFrom(RColorBrewer,brewer.pal)
+importFrom(S4Vectors,DataFrame)
+importFrom(S4Vectors,as.data.frame)
+importFrom(S4Vectors,metadata)
 importFrom(SummarizedExperiment,"colData<-")
 importFrom(SummarizedExperiment,SummarizedExperiment)
 importFrom(SummarizedExperiment,assay)
