--- a/NAMESPACE
+++ b/NAMESPACE
@@ -69,8 +69,12 @@ importFrom(GenomeInfoDb,seqnames)
 importFrom(GenomicRanges,GRanges)
 importFrom(IRanges,IRanges)
 importFrom(RColorBrewer,brewer.pal)
+importFrom(S4Vectors,"mcols<-")
+importFrom(S4Vectors,"metadata<-")
 importFrom(S4Vectors,DataFrame)
 importFrom(S4Vectors,as.data.frame)
+importFrom(S4Vectors,cor)
+importFrom(S4Vectors,mcols)
 importFrom(S4Vectors,metadata)
 importFrom(SummarizedExperiment,"colData<-")
 importFrom(SummarizedExperiment,SummarizedExperiment)
@@ -139,6 +143,12 @@ importFrom(knitr,kable)
 importFrom(magrittr,"%>%")
 importFrom(magrittr,set_names)
 importFrom(magrittr,set_rownames)
+importFrom(methods,.hasSlot)
+importFrom(methods,as)
+importFrom(methods,formalArgs)
+importFrom(methods,is)
+importFrom(methods,slotNames)
+importFrom(methods,validObject)
 importFrom(pheatmap,pheatmap)
 importFrom(rdrop2,drop_acc)
 importFrom(rdrop2,drop_auth)
