Add SummarizedExperiment method that converts gene IDs in the rownames to symbols

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -53,6 +53,7 @@ export(uniteInterestingGroups)
 export(updateMessage)
 exportMethods("interestingGroups<-")
 exportMethods("sampleData<-")
+exportMethods(convertGenesToSymbols)
 exportMethods(flatFiles)
 exportMethods(gene2symbol)
 exportMethods(interestingGroups)
