--- a/NAMESPACE
+++ b/NAMESPACE
@@ -122,6 +122,7 @@ importFrom(basejump,assertIsGene2symbol)
 importFrom(basejump,assertIsHexColorFunctionOrNULL)
 importFrom(basejump,assertIsTx2gene)
 importFrom(basejump,camel)
+importFrom(basejump,convertGenesToSymbols)
 importFrom(basejump,localOrRemoteFile)
 importFrom(basejump,makeNames)
 importFrom(basejump,readFileByExtension)
