--- a/NAMESPACE
+++ b/NAMESPACE
@@ -148,6 +148,7 @@ importFrom(magrittr,set_rownames)
 importFrom(methods,.hasSlot)
 importFrom(methods,as)
 importFrom(methods,formalArgs)
+importFrom(methods,getMethod)
 importFrom(methods,is)
 importFrom(methods,slotNames)
 importFrom(methods,validObject)
