Improve working examples and documentation

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -33,4 +33,4 @@ reference:
     - starts_with("assert")
   - title: Example Data
     contents:
-    - ends_with("_small")
+    - starts_with("rse_")
