--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,9 +17,11 @@ export(gene2symbol)
 export(glimpse)
 export(interestingGroups)
 export(lanePattern)
+export(magma)
 export(metadata)
 export(metadataPriorityCols)
 export(metrics)
+export(plasma)
 export(plotCorrelationHeatmap)
 export(plotDot)
 export(plotGene)
@@ -46,11 +48,14 @@ export(sampleMetadata)
 export(sampleYAML)
 export(sampleYAMLMetadata)
 export(sampleYAMLMetrics)
+export(scale_color_viridis)
+export(scale_fill_viridis)
 export(selectSamples)
 export(separatorBar)
 export(tibble)
 export(uniteInterestingGroups)
 export(updateMessage)
+export(viridis)
 exportMethods("interestingGroups<-")
 exportMethods("sampleData<-")
 exportMethods(convertGenesToSymbols)
@@ -183,4 +188,8 @@ importFrom(tibble,tibble)
 importFrom(tidyr,unite)
 importFrom(utils,globalVariables)
 importFrom(utils,sessionInfo)
+importFrom(viridis,magma)
+importFrom(viridis,plasma)
+importFrom(viridis,scale_color_viridis)
+importFrom(viridis,scale_fill_viridis)
 importFrom(viridis,viridis)
