--- a/NAMESPACE
+++ b/NAMESPACE
@@ -128,6 +128,7 @@ importFrom(basejump,assertIsHexColorFunctionOrNULL)
 importFrom(basejump,assertIsTx2gene)
 importFrom(basejump,camel)
 importFrom(basejump,convertGenesToSymbols)
+importFrom(basejump,emptyRanges)
 importFrom(basejump,localOrRemoteFile)
 importFrom(basejump,makeNames)
 importFrom(basejump,readFileByExtension)
