Migrate from basejump

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export("sampleMetadata<-")
 export(DataFrame)
 export(GRanges)
 export(IRanges)
+export(assertFormalAnnotationCol)
 export(assertFormalInterestingGroups)
 export(bcbio)
 export(checkInterestingGroups)
