Update `assertFormalAnnotationCol()` code

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -110,6 +110,7 @@ importFrom(assertive,assert_is_all_of)
 importFrom(assertive,assert_is_an_integer)
 importFrom(assertive,assert_is_any_of)
 importFrom(assertive,assert_is_character)
+importFrom(assertive,assert_is_factor)
 importFrom(assertive,assert_is_identical_to_na)
 importFrom(assertive,assert_is_integer)
 importFrom(assertive,assert_is_list)
@@ -119,7 +120,6 @@ importFrom(assertive,assert_is_subset)
 importFrom(assertive,assert_is_tbl)
 importFrom(assertive,has_dims)
 importFrom(assertive,is_a_string)
-importFrom(basejump,assertFormalAnnotationCol)
 importFrom(basejump,assertHasRownames)
 importFrom(basejump,assertIsAStringOrNULL)
 importFrom(basejump,assertIsAnImplicitInteger)
