Reexport `viridis::inferno()`

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(copyToDropbox)
 export(flatFiles)
 export(gene2symbol)
 export(glimpse)
+export(inferno)
 export(interestingGroups)
 export(lanePattern)
 export(magma)
@@ -190,6 +191,7 @@ importFrom(tibble,tibble)
 importFrom(tidyr,unite)
 importFrom(utils,globalVariables)
 importFrom(utils,sessionInfo)
+importFrom(viridis,inferno)
 importFrom(viridis,magma)
 importFrom(viridis,plasma)
 importFrom(viridis,scale_color_viridis)
