--- a/NAMESPACE
+++ b/NAMESPACE
@@ -51,6 +51,7 @@ export(sampleYAML)
 export(sampleYAMLMetadata)
 export(sampleYAMLMetrics)
 export(scale_color_viridis)
+export(scale_colour_viridis)
 export(scale_fill_viridis)
 export(selectSamples)
 export(separatorBar)
@@ -195,5 +196,6 @@ importFrom(viridis,inferno)
 importFrom(viridis,magma)
 importFrom(viridis,plasma)
 importFrom(viridis,scale_color_viridis)
+importFrom(viridis,scale_colour_viridis)
 importFrom(viridis,scale_fill_viridis)
 importFrom(viridis,viridis)
