--- a/NAMESPACE
+++ b/NAMESPACE
@@ -72,6 +72,7 @@ exportMethods(sampleData)
 exportMethods(sampleYAML)
 exportMethods(sampleYAMLMetadata)
 exportMethods(sampleYAMLMetrics)
+exportMethods(selectSamples)
 exportMethods(uniteInterestingGroups)
 importFrom(Biostrings,reverseComplement)
 importFrom(GenomeInfoDb,seqnames)
@@ -111,6 +112,7 @@ importFrom(assertive,assert_is_a_string)
 importFrom(assertive,assert_is_all_of)
 importFrom(assertive,assert_is_an_integer)
 importFrom(assertive,assert_is_any_of)
+importFrom(assertive,assert_is_atomic)
 importFrom(assertive,assert_is_character)
 importFrom(assertive,assert_is_factor)
 importFrom(assertive,assert_is_identical_to_na)
