Add `counts()` accessor support

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -62,6 +62,7 @@ export(viridis)
 exportMethods("interestingGroups<-")
 exportMethods("sampleData<-")
 exportMethods(convertGenesToSymbols)
+exportMethods(counts)
 exportMethods(flatFiles)
 exportMethods(gene2symbol)
 exportMethods(interestingGroups)
@@ -74,6 +75,7 @@ exportMethods(sampleYAMLMetadata)
 exportMethods(sampleYAMLMetrics)
 exportMethods(selectSamples)
 exportMethods(uniteInterestingGroups)
+importFrom(BiocGenerics,counts)
 importFrom(Biostrings,reverseComplement)
 importFrom(GenomeInfoDb,seqnames)
 importFrom(GenomicRanges,GRanges)
