Provide method support for `counts()` on a SummarizedExperiment

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -91,6 +91,7 @@ importFrom(S4Vectors,metadata)
 importFrom(SummarizedExperiment,"colData<-")
 importFrom(SummarizedExperiment,SummarizedExperiment)
 importFrom(SummarizedExperiment,assay)
+importFrom(SummarizedExperiment,assays)
 importFrom(SummarizedExperiment,colData)
 importFrom(SummarizedExperiment,rowData)
 importFrom(assertive,assert_all_are_dirs)
