--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -41,6 +41,7 @@ Depends:
     SummarizedExperiment,
     basejump (>= 0.5)
 Imports:
+    BiocGenerics,
     Biostrings,
     GenomeInfoDb,
     GenomicRanges,
