--- a/NAMESPACE
+++ b/NAMESPACE
@@ -167,6 +167,7 @@ importFrom(methods,is)
 importFrom(methods,slotNames)
 importFrom(methods,validObject)
 importFrom(pheatmap,pheatmap)
+importFrom(plyr,ldply)
 importFrom(rdrop2,drop_acc)
 importFrom(rdrop2,drop_auth)
 importFrom(rdrop2,drop_create)
