Improve NA handling and early return on missing key, with more informative warning

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -137,6 +137,7 @@ importFrom(basejump,assertIsTx2gene)
 importFrom(basejump,camel)
 importFrom(basejump,convertGenesToSymbols)
 importFrom(basejump,emptyRanges)
+importFrom(basejump,fixNA)
 importFrom(basejump,localOrRemoteFile)
 importFrom(basejump,makeNames)
 importFrom(basejump,readFileByExtension)
