Convert YAML parsing functions to standard functions. Simplify and require the YAML file, instead of inputting the YAML list.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -44,6 +44,8 @@ export(readProgramVersions)
 export(readSampleData)
 export(readSampleMetadataFile)
 export(readTx2gene)
+export(readYAMLSampleData)
+export(readYAMLSampleMetrics)
 export(sampleData)
 export(sampleDirs)
 export(sampleMetadata)
@@ -70,9 +72,6 @@ exportMethods(plotCorrelationHeatmap)
 exportMethods(plotHeatmap)
 exportMethods(plotQuantileHeatmap)
 exportMethods(sampleData)
-exportMethods(sampleYAML)
-exportMethods(sampleYAMLMetadata)
-exportMethods(sampleYAMLMetrics)
 exportMethods(selectSamples)
 exportMethods(uniteInterestingGroups)
 importFrom(BiocGenerics,counts)
