Improve documentation and disable row dendrogram by default

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -99,6 +99,7 @@ importFrom(assertive,assert_all_are_greater_than)
 importFrom(assertive,assert_all_are_in_range)
 importFrom(assertive,assert_all_are_matching_regex)
 importFrom(assertive,assert_all_are_non_missing_nor_empty_character)
+importFrom(assertive,assert_all_are_non_negative)
 importFrom(assertive,assert_all_are_positive)
 importFrom(assertive,assert_are_disjoint_sets)
 importFrom(assertive,assert_are_identical)
@@ -110,6 +111,7 @@ importFrom(assertive,assert_has_names)
 importFrom(assertive,assert_has_no_duplicates)
 importFrom(assertive,assert_has_rownames)
 importFrom(assertive,assert_is_a_bool)
+importFrom(assertive,assert_is_a_number)
 importFrom(assertive,assert_is_a_string)
 importFrom(assertive,assert_is_all_of)
 importFrom(assertive,assert_is_an_integer)
