--- a/NAMESPACE
+++ b/NAMESPACE
@@ -142,14 +142,13 @@ importFrom(basejump,fixNA)
 importFrom(basejump,localOrRemoteFile)
 importFrom(basejump,makeNames)
 importFrom(basejump,readFileByExtension)
+importFrom(basejump,readYAML)
 importFrom(basejump,removeNA)
 importFrom(basejump,sanitizeSampleData)
 importFrom(basejump,snake)
 importFrom(dendsort,dendsort)
 importFrom(dplyr,arrange)
-importFrom(dplyr,bind_rows)
 importFrom(dplyr,group_by)
-importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
 importFrom(dplyr,mutate_all)
 importFrom(dplyr,mutate_if)
