--- a/NAMESPACE
+++ b/NAMESPACE
@@ -147,11 +147,14 @@ importFrom(basejump,sanitizeSampleData)
 importFrom(basejump,snake)
 importFrom(dendsort,dendsort)
 importFrom(dplyr,arrange)
+importFrom(dplyr,everything)
+importFrom(dplyr,funs)
 importFrom(dplyr,group_by)
 importFrom(dplyr,mutate)
 importFrom(dplyr,mutate_all)
 importFrom(dplyr,mutate_if)
 importFrom(dplyr,pull)
+importFrom(dplyr,select)
 importFrom(dplyr,select_if)
 importFrom(dplyr,ungroup)
 importFrom(grDevices,colorRampPalette)
