--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,6 +31,7 @@ export(plotHeatmap)
 export(plotQC)
 export(plotQuantileHeatmap)
 export(plotViolin)
+export(prepareSampleData)
 export(prepareSampleMetadata)
 export(prepareSummarizedExperiment)
 export(prepareTemplate)
@@ -152,6 +153,7 @@ importFrom(dplyr,funs)
 importFrom(dplyr,group_by)
 importFrom(dplyr,mutate)
 importFrom(dplyr,mutate_all)
+importFrom(dplyr,mutate_at)
 importFrom(dplyr,mutate_if)
 importFrom(dplyr,pull)
 importFrom(dplyr,select)
