--- a/NAMESPACE
+++ b/NAMESPACE
@@ -168,6 +168,7 @@ importFrom(methods,as)
 importFrom(methods,formalArgs)
 importFrom(methods,getMethod)
 importFrom(methods,is)
+importFrom(methods,setAs)
 importFrom(methods,slotNames)
 importFrom(methods,validObject)
 importFrom(pheatmap,pheatmap)
