--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ export(interestingGroups)
 export(lanePattern)
 export(magma)
 export(metadata)
+export(metadataBlacklist)
 export(metrics)
 export(plasma)
 export(plotCorrelationHeatmap)
