Reenable Travis CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ before_install:
 warnings_are_errors: true
 
 # Temporarily enable when caching Bioconductor packages
-script: true
+# script: true
 
 notifications:
   email:
