--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,77 @@
 Package: bcbioBase
-Title: TRAVIS BIOCONDUCTOR CACHE
-Description: TRAVIS BIOCONDUCTOR CACHE
-Version: 0.0.99
+Title: bcbio Base Functions
+Description: Base functions and generics for bcbio R packages.
+Version: 0.2.4
+Authors@R: c(
+    person(
+        given = "Michael",
+        family = "Steinbaugh",
+        email ="mike@steinbaugh.com",
+        role = c("aut", "cre"),
+        comment = c(ORCID = "0000-0002-2403-2221")
+    ),
+    person(
+        given = "Lorena",
+        family = "Pantano",
+        email = "lorena.pantano@gmail.com",
+        role = "aut",
+        comment = c(ORCID = "0000-0002-3859-3249")
+    ),
+    person(
+        given = "Rory",
+        family = "Kirchner",
+        email = "roryk@alum.mit.edu",
+        role = "aut",
+        comment = c(ORCID = "0000-0003-4814-5885")
+    ),
+    person(
+        given = "Harvard Chan Bioinformatics Core",
+        email = "bioinformatics@hsph.harvard.edu",
+        role = c("cph", "fnd")
+    ))
+URL:
+    http://bioinformatics.sph.harvard.edu/bcbioBase,
+    https://github.com/hbc/bcbioBase
+BugReports: https://github.com/hbc/bcbioBase/issues
+License: MIT + file LICENSE
+Encoding: UTF-8
+LazyData: TRUE
 Depends:
     R (>= 3.4),
-    SummarizedExperiment
+    SummarizedExperiment,
+    basejump (>= 0.5)
 Imports:
     BiocGenerics,
     Biostrings,
     GenomeInfoDb,
     GenomicRanges,
     IRanges,
-    S4Vectors
+    RColorBrewer,
+    S4Vectors,
+    assertive (>= 0.3),
+    dendsort,
+    dplyr (>= 0.7),
+    grDevices,
+    knitr,
+    magrittr (>= 1.5),
+    methods,
+    pheatmap (>= 1.0),
+    plyr (>= 1.8),
+    rdrop2 (>= 0.8),
+    readr (>= 1.1),
+    rlang (>= 0.2),
+    scales,
+    sessioninfo (>= 1.0),
+    stats,
+    stringr (>= 1.3),
+    tibble (>= 1.4),
+    tidyr (>= 0.8),
+    utils,
+    viridis (>= 0.5)
+Suggests:
+    testthat (>= 2.0)
+Remotes:
+    steinbaugh/basejump
+biocViews: Infrastructure
+Roxygen: list(markdown = TRUE)
+RoxygenNote: 6.0.1
