Improve `readSampleData()` handling. Don't attempt to drop `description`

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -201,6 +201,7 @@ importFrom(tibble,has_rownames)
 importFrom(tibble,is_tibble)
 importFrom(tibble,rownames_to_column)
 importFrom(tibble,tibble)
+importFrom(tidyr,expand)
 importFrom(tidyr,unite)
 importFrom(utils,globalVariables)
 importFrom(utils,sessionInfo)
