--- a/NAMESPACE
+++ b/NAMESPACE
@@ -151,6 +151,7 @@ importFrom(dplyr,arrange)
 importFrom(dplyr,everything)
 importFrom(dplyr,funs)
 importFrom(dplyr,group_by)
+importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
 importFrom(dplyr,mutate_all)
 importFrom(dplyr,mutate_at)
