--- a/NAMESPACE
+++ b/NAMESPACE
@@ -107,6 +107,7 @@ importFrom(assertive.properties,assert_has_dims)
 importFrom(assertive.properties,assert_has_names)
 importFrom(assertive.properties,assert_has_no_duplicates)
 importFrom(assertive.properties,assert_has_rownames)
+importFrom(assertive.properties,assert_is_atomic)
 importFrom(assertive.properties,assert_is_non_empty)
 importFrom(assertive.properties,has_dims)
 importFrom(assertive.sets,assert_are_disjoint_sets)
@@ -120,7 +121,6 @@ importFrom(assertive.types,assert_is_a_string)
 importFrom(assertive.types,assert_is_all_of)
 importFrom(assertive.types,assert_is_an_integer)
 importFrom(assertive.types,assert_is_any_of)
-importFrom(assertive.types,assert_is_atomic)
 importFrom(assertive.types,assert_is_character)
 importFrom(assertive.types,assert_is_factor)
 importFrom(assertive.types,assert_is_integer)
