--- a/NAMESPACE
+++ b/NAMESPACE
@@ -141,6 +141,7 @@ importFrom(basejump,emptyRanges)
 importFrom(basejump,fixNA)
 importFrom(basejump,localOrRemoteFile)
 importFrom(basejump,makeNames)
+importFrom(basejump,printString)
 importFrom(basejump,readFileByExtension)
 importFrom(basejump,readYAML)
 importFrom(basejump,removeNA)
