Migrate some internal ggplot code from bcbioSingleCell, to share with bcbioRNASeq

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -57,7 +57,10 @@ Imports:
     assertive.types,
     dendsort,
     dplyr (>= 0.7),
+    ggplot2 (>= 2.2.1),
+    ggrepel (>= 0.7),
     grDevices,
+    grid,
     knitr,
     magrittr (>= 1.5),
     methods,
