--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,9 +15,11 @@ export(checkInterestingGroups)
 export(copyToDropbox)
 export(flatFiles)
 export(gene2symbol)
+export(geom_label_bcbio)
 export(glimpse)
 export(inferno)
 export(interestingGroups)
+export(labelSep)
 export(lanePattern)
 export(magma)
 export(metadata)
@@ -161,7 +163,12 @@ importFrom(dplyr,pull)
 importFrom(dplyr,select)
 importFrom(dplyr,select_if)
 importFrom(dplyr,ungroup)
+importFrom(ggplot2,geom_hline)
+importFrom(ggplot2,geom_vline)
+importFrom(ggrepel,geom_label_repel)
 importFrom(grDevices,colorRampPalette)
+importFrom(grid,arrow)
+importFrom(grid,unit)
 importFrom(knitr,kable)
 importFrom(magrittr,"%>%")
 importFrom(magrittr,set_names)
