Initial commit of ggplot2 plotting convenience functions, prefixed with `bcbio_*`

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,11 +11,14 @@ export(IRanges)
 export(assertFormalAnnotationCol)
 export(assertFormalInterestingGroups)
 export(bcbio)
+export(bcbio_geom_abline)
+export(bcbio_geom_label)
+export(bcbio_geom_label_average)
+export(bcbio_geom_label_repel)
 export(checkInterestingGroups)
 export(copyToDropbox)
 export(flatFiles)
 export(gene2symbol)
-export(geom_label_bcbio)
 export(glimpse)
 export(inferno)
 export(interestingGroups)
@@ -85,9 +88,11 @@ importFrom(RColorBrewer,brewer.pal)
 importFrom(S4Vectors,"mcols<-")
 importFrom(S4Vectors,"metadata<-")
 importFrom(S4Vectors,DataFrame)
+importFrom(S4Vectors,aggregate)
 importFrom(S4Vectors,as.data.frame)
 importFrom(S4Vectors,cor)
 importFrom(S4Vectors,mcols)
+importFrom(S4Vectors,merge)
 importFrom(S4Vectors,metadata)
 importFrom(SummarizedExperiment,"colData<-")
 importFrom(SummarizedExperiment,SummarizedExperiment)
@@ -125,6 +130,7 @@ importFrom(assertive.types,assert_is_an_integer)
 importFrom(assertive.types,assert_is_any_of)
 importFrom(assertive.types,assert_is_character)
 importFrom(assertive.types,assert_is_factor)
+importFrom(assertive.types,assert_is_function)
 importFrom(assertive.types,assert_is_integer)
 importFrom(assertive.types,assert_is_list)
 importFrom(assertive.types,assert_is_matrix)
@@ -163,7 +169,9 @@ importFrom(dplyr,pull)
 importFrom(dplyr,select)
 importFrom(dplyr,select_if)
 importFrom(dplyr,ungroup)
+importFrom(ggplot2,aes_string)
 importFrom(ggplot2,geom_hline)
+importFrom(ggplot2,geom_label)
 importFrom(ggplot2,geom_vline)
 importFrom(ggrepel,geom_label_repel)
 importFrom(grDevices,colorRampPalette)
