Initial commit of ggplot2 convenience functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -207,6 +207,7 @@ importFrom(rlang,sym)
 importFrom(rlang,syms)
 importFrom(scales,percent)
 importFrom(sessioninfo,session_info)
+importFrom(stats,as.formula)
 importFrom(stats,hclust)
 importFrom(stats,quantile)
 importFrom(stringr,str_pad)
