Initial commit of `sampleNames()` generic

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -54,6 +54,7 @@ export(readYAMLSampleMetrics)
 export(sampleData)
 export(sampleDirs)
 export(sampleMetadata)
+export(sampleNames)
 export(sampleYAML)
 export(sampleYAMLMetadata)
 export(sampleYAMLMetrics)
@@ -77,6 +78,7 @@ exportMethods(plotCorrelationHeatmap)
 exportMethods(plotHeatmap)
 exportMethods(plotQuantileHeatmap)
 exportMethods(sampleData)
+exportMethods(sampleNames)
 exportMethods(selectSamples)
 exportMethods(uniteInterestingGroups)
 importFrom(BiocGenerics,counts)
