Add `sampleNames()` method support for SummarizedExperiment

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -54,7 +54,6 @@ export(readYAMLSampleMetrics)
 export(sampleData)
 export(sampleDirs)
 export(sampleMetadata)
-export(sampleNames)
 export(sampleYAML)
 export(sampleYAMLMetadata)
 export(sampleYAMLMetrics)
@@ -81,6 +80,7 @@ exportMethods(sampleData)
 exportMethods(sampleNames)
 exportMethods(selectSamples)
 exportMethods(uniteInterestingGroups)
+importFrom(Biobase,sampleNames)
 importFrom(BiocGenerics,counts)
 importFrom(Biostrings,reverseComplement)
 importFrom(GenomeInfoDb,seqnames)
