--- a/NAMESPACE
+++ b/NAMESPACE
@@ -57,6 +57,7 @@ export(sampleMetadata)
 export(sampleYAML)
 export(sampleYAMLMetadata)
 export(sampleYAMLMetrics)
+export(sanitizeSampleData)
 export(scale_color_viridis)
 export(scale_colour_viridis)
 export(scale_fill_viridis)
@@ -155,7 +156,6 @@ importFrom(basejump,printString)
 importFrom(basejump,readFileByExtension)
 importFrom(basejump,readYAML)
 importFrom(basejump,removeNA)
-importFrom(basejump,sanitizeSampleData)
 importFrom(basejump,snake)
 importFrom(dendsort,dendsort)
 importFrom(dplyr,arrange)
