Update recipients [ci skip]

--- a/.travis.yml
+++ b/.travis.yml
@@ -32,6 +32,8 @@ warnings_are_errors: true
 
 notifications:
   email:
+    recipients:
+      - mike@steinbaugh.com
     on_success: change
     on_failure: change
 
