--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ os:
 # branches:
 #   except:
 #   - develop
-  
+
 env:
   global:
     - LINTR_COMMENT_BOT=true
@@ -41,6 +41,7 @@ r_packages:
   - covr
 bioc_packages:
   - BiocCheck
+  - GenomeInfoDbData
 r_github_packages:
   - jimhester/lintr
 
