Exclude macOS bioc-devel from build matrix

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,10 +12,20 @@ os:
   - linux
   - osx
 
+matrix:
+  exclude:
+  - os: osx
+    r: bioc-devel
+
 # blocklist
 # branches:
 #   except:
 #   - develop
+
+# safelist
+# branches:
+#   only:
+#   - master
 
 env:
   global:
