--- a/.travis.yml
+++ b/.travis.yml
@@ -18,9 +18,9 @@ matrix:
     r: bioc-devel
 
 # blocklist
-# branches:
-#   except:
-#   - develop
+branches:
+  except:
+  - develop
 
 # safelist
 # branches:
