--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,10 +30,12 @@ export(metadataBlacklist)
 export(metrics)
 export(plasma)
 export(plotCorrelationHeatmap)
+export(plotDot)
 export(plotGene)
 export(plotHeatmap)
 export(plotQC)
 export(plotQuantileHeatmap)
+export(plotViolin)
 export(prepareSampleData)
 export(prepareSampleMetadata)
 export(prepareSummarizedExperiment)
