Initial commit of `minimalSampleData()` utility

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,7 @@ export(magma)
 export(metadata)
 export(metadataBlacklist)
 export(metrics)
+export(minimalSampleData)
 export(plasma)
 export(plotCorrelationHeatmap)
 export(plotDot)
