--- a/appveyor.yml
+++ b/appveyor.yml
@@ -20,7 +20,7 @@ environment:
     BIOC_USE_DEVEL: TRUE
     R_ARCH: x64
     USE_RTOOLS: TRUE
-    WARNINGS_ARE_ERRORS: 0
+    # WARNINGS_ARE_ERRORS: 1
 
 build_script:
   - Rscript -e "source('http://bioconductor.org/biocLite.R')"
