--- a/NAMESPACE
+++ b/NAMESPACE
@@ -171,7 +171,7 @@ importFrom(dplyr,pull)
 importFrom(dplyr,select)
 importFrom(dplyr,select_if)
 importFrom(dplyr,ungroup)
-importFrom(ggplot2,aes_string)
+importFrom(ggplot2,aes)
 importFrom(ggplot2,geom_hline)
 importFrom(ggplot2,geom_label)
 importFrom(ggplot2,geom_vline)
