--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(checkInterestingGroups)
 export(copyToDropbox)
 export(flatFiles)
 export(gene2symbol)
+export(ggplot)
 export(glimpse)
 export(inferno)
 export(interestingGroups)
@@ -59,6 +60,12 @@ export(sampleYAML)
 export(sampleYAMLMetadata)
 export(sampleYAMLMetrics)
 export(sanitizeSampleData)
+export(scale_color_hue)
+export(scale_color_manual)
+export(scale_colour_hue)
+export(scale_colour_manual)
+export(scale_fill_hue)
+export(scale_fill_manual)
 export(selectSamples)
 export(separatorBar)
 export(tibble)
@@ -172,6 +179,13 @@ importFrom(ggplot2,aes)
 importFrom(ggplot2,geom_hline)
 importFrom(ggplot2,geom_label)
 importFrom(ggplot2,geom_vline)
+importFrom(ggplot2,ggplot)
+importFrom(ggplot2,scale_color_hue)
+importFrom(ggplot2,scale_color_manual)
+importFrom(ggplot2,scale_colour_hue)
+importFrom(ggplot2,scale_colour_manual)
+importFrom(ggplot2,scale_fill_hue)
+importFrom(ggplot2,scale_fill_manual)
 importFrom(ggrepel,geom_label_repel)
 importFrom(grDevices,colorRampPalette)
 importFrom(grid,arrow)
