--- a/NAMESPACE
+++ b/NAMESPACE
@@ -60,12 +60,25 @@ export(sampleYAML)
 export(sampleYAMLMetadata)
 export(sampleYAMLMetrics)
 export(sanitizeSampleData)
+export(scale_color_gradient)
+export(scale_color_gradientn)
 export(scale_color_hue)
 export(scale_color_manual)
+export(scale_color_viridis)
+export(scale_color_viridis_c)
+export(scale_color_viridis_d)
+export(scale_colour_gradient)
+export(scale_colour_gradientn)
 export(scale_colour_hue)
 export(scale_colour_manual)
+export(scale_colour_viridis)
+export(scale_colour_viridis_c)
+export(scale_colour_viridis_d)
 export(scale_fill_hue)
 export(scale_fill_manual)
+export(scale_fill_viridis)
+export(scale_fill_viridis_c)
+export(scale_fill_viridis_d)
 export(selectSamples)
 export(separatorBar)
 export(tibble)
@@ -180,12 +193,22 @@ importFrom(ggplot2,geom_hline)
 importFrom(ggplot2,geom_label)
 importFrom(ggplot2,geom_vline)
 importFrom(ggplot2,ggplot)
+importFrom(ggplot2,scale_color_gradient)
+importFrom(ggplot2,scale_color_gradientn)
 importFrom(ggplot2,scale_color_hue)
 importFrom(ggplot2,scale_color_manual)
+importFrom(ggplot2,scale_color_viridis_c)
+importFrom(ggplot2,scale_color_viridis_d)
+importFrom(ggplot2,scale_colour_gradient)
+importFrom(ggplot2,scale_colour_gradientn)
 importFrom(ggplot2,scale_colour_hue)
 importFrom(ggplot2,scale_colour_manual)
+importFrom(ggplot2,scale_colour_viridis_c)
+importFrom(ggplot2,scale_colour_viridis_d)
 importFrom(ggplot2,scale_fill_hue)
 importFrom(ggplot2,scale_fill_manual)
+importFrom(ggplot2,scale_fill_viridis_c)
+importFrom(ggplot2,scale_fill_viridis_d)
 importFrom(ggrepel,geom_label_repel)
 importFrom(grDevices,colorRampPalette)
 importFrom(grid,arrow)
@@ -239,4 +262,7 @@ importFrom(utils,sessionInfo)
 importFrom(viridis,inferno)
 importFrom(viridis,magma)
 importFrom(viridis,plasma)
+importFrom(viridis,scale_color_viridis)
+importFrom(viridis,scale_colour_viridis)
+importFrom(viridis,scale_fill_viridis)
 importFrom(viridis,viridis)
