Migrate additional basic SummarizedExperiment methods to basejump

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,8 +2,6 @@
 
 export("%>%")
 export("bcbio<-")
-export("interestingGroups<-")
-export("sampleData<-")
 export("sampleMetadata<-")
 export(DataFrame)
 export(GRanges)
@@ -21,7 +19,6 @@ export(flatFiles)
 export(ggplot)
 export(glimpse)
 export(inferno)
-export(interestingGroups)
 export(labelSep)
 export(lanePattern)
 export(magma)
@@ -52,13 +49,11 @@ export(readSampleMetadataFile)
 export(readTx2gene)
 export(readYAMLSampleData)
 export(readYAMLSampleMetrics)
-export(sampleData)
 export(sampleDirs)
 export(sampleMetadata)
 export(sampleYAML)
 export(sampleYAMLMetadata)
 export(sampleYAMLMetrics)
-export(sanitizeSampleData)
 export(scale_color_gradient)
 export(scale_color_gradientn)
 export(scale_color_hue)
@@ -80,20 +75,13 @@ export(scale_fill_viridis_c)
 export(scale_fill_viridis_d)
 export(separatorBar)
 export(tibble)
-export(uniteInterestingGroups)
 export(updateMessage)
 export(viridis)
-exportMethods("interestingGroups<-")
-exportMethods("sampleData<-")
 exportMethods(flatFiles)
-exportMethods(interestingGroups)
 exportMethods(plotCorrelationHeatmap)
 exportMethods(plotHeatmap)
 exportMethods(plotQuantileHeatmap)
-exportMethods(sampleData)
-exportMethods(sampleNames)
-exportMethods(uniteInterestingGroups)
-importFrom(Biobase,sampleNames)
+importClassesFrom(SummarizedExperiment,SummarizedExperiment)
 importFrom(Biostrings,reverseComplement)
 importFrom(GenomeInfoDb,seqnames)
 importFrom(GenomicRanges,GRanges)
