Update interesting groups assert check

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -140,6 +140,7 @@ importFrom(assertive.types,assert_is_matrix)
 importFrom(assertive.types,assert_is_tbl)
 importFrom(assertive.types,is_a_string)
 importFrom(basejump,"interestingGroups<-")
+importFrom(basejump,assertFormalInterestingGroups)
 importFrom(basejump,assertHasRownames)
 importFrom(basejump,assertIsAStringOrNULL)
 importFrom(basejump,assertIsAnImplicitInteger)
