Check against develop branch

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -81,7 +81,7 @@ Imports:
 Suggests:
     testthat (>= 2.0)
 Remotes:
-    steinbaugh/basejump
+    steinbaugh/basejump@develop
 biocViews: Infrastructure
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 6.0.1
