Add functions migrated to basejump as reexports

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,19 +3,23 @@
 export("%>%")
 export("bcbio<-")
 export("interestingGroups<-")
+export("sampleData<-")
 export("sampleMetadata<-")
 export(DataFrame)
 export(GRanges)
 export(IRanges)
 export(assertFormalAnnotationCol)
+export(assertFormalInterestingGroups)
 export(bcbio)
 export(bcbio_geom_abline)
 export(bcbio_geom_label)
 export(bcbio_geom_label_average)
 export(bcbio_geom_label_repel)
 export(checkInterestingGroups)
+export(convertGenesToSymbols)
 export(copyToDropbox)
 export(flatFiles)
+export(gene2symbol)
 export(ggplot)
 export(glimpse)
 export(inferno)
@@ -50,11 +54,14 @@ export(readSampleMetadataFile)
 export(readTx2gene)
 export(readYAMLSampleData)
 export(readYAMLSampleMetrics)
+export(sampleData)
 export(sampleDirs)
 export(sampleMetadata)
+export(sampleNames)
 export(sampleYAML)
 export(sampleYAMLMetadata)
 export(sampleYAMLMetrics)
+export(sanitizeSampleData)
 export(scale_color_gradient)
 export(scale_color_gradientn)
 export(scale_color_hue)
@@ -74,8 +81,10 @@ export(scale_fill_manual)
 export(scale_fill_viridis)
 export(scale_fill_viridis_c)
 export(scale_fill_viridis_d)
+export(selectSamples)
 export(separatorBar)
 export(tibble)
+export(uniteInterestingGroups)
 export(updateMessage)
 export(viridis)
 exportMethods(flatFiles)
@@ -140,6 +149,7 @@ importFrom(assertive.types,assert_is_matrix)
 importFrom(assertive.types,assert_is_tbl)
 importFrom(assertive.types,is_a_string)
 importFrom(basejump,"interestingGroups<-")
+importFrom(basejump,"sampleData<-")
 importFrom(basejump,assertFormalInterestingGroups)
 importFrom(basejump,assertHasRownames)
 importFrom(basejump,assertIsAStringOrNULL)
@@ -147,8 +157,10 @@ importFrom(basejump,assertIsAnImplicitInteger)
 importFrom(basejump,assertIsHexColorFunctionOrNULL)
 importFrom(basejump,assertIsTx2gene)
 importFrom(basejump,camel)
+importFrom(basejump,convertGenesToSymbols)
 importFrom(basejump,emptyRanges)
 importFrom(basejump,fixNA)
+importFrom(basejump,gene2symbol)
 importFrom(basejump,interestingGroups)
 importFrom(basejump,localOrRemoteFile)
 importFrom(basejump,makeNames)
@@ -156,7 +168,12 @@ importFrom(basejump,printString)
 importFrom(basejump,readFileByExtension)
 importFrom(basejump,readYAML)
 importFrom(basejump,removeNA)
+importFrom(basejump,sampleData)
+importFrom(basejump,sampleNames)
+importFrom(basejump,sanitizeSampleData)
+importFrom(basejump,selectSamples)
 importFrom(basejump,snake)
+importFrom(basejump,uniteInterestingGroups)
 importFrom(dendsort,dendsort)
 importFrom(dplyr,arrange)
 importFrom(dplyr,everything)
