Add hexadecimal color palette support

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,7 +15,9 @@ export(bcbio_geom_abline)
 export(bcbio_geom_label)
 export(bcbio_geom_label_average)
 export(bcbio_geom_label_repel)
+export(brewer.pal)
 export(checkInterestingGroups)
+export(colorRampPalette)
 export(convertGenesToSymbols)
 export(copyToDropbox)
 export(flatFiles)
