--- a/NAMESPACE
+++ b/NAMESPACE
@@ -116,6 +116,7 @@ importFrom(SummarizedExperiment,colData)
 importFrom(SummarizedExperiment,rowData)
 importFrom(assertive.base,assert_are_identical)
 importFrom(assertive.base,assert_is_identical_to_na)
+importFrom(assertive.data,assert_all_are_hex_colors)
 importFrom(assertive.files,assert_all_are_dirs)
 importFrom(assertive.files,assert_all_are_existing_files)
 importFrom(assertive.numbers,assert_all_are_greater_than)
