Offload `separatorBar` and `updateMessage` to basejump

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -175,8 +175,10 @@ importFrom(basejump,sampleData)
 importFrom(basejump,sampleNames)
 importFrom(basejump,sanitizeSampleData)
 importFrom(basejump,selectSamples)
+importFrom(basejump,separatorBar)
 importFrom(basejump,snake)
 importFrom(basejump,uniteInterestingGroups)
+importFrom(basejump,updateMessage)
 importFrom(dendsort,dendsort)
 importFrom(dplyr,arrange)
 importFrom(dplyr,everything)
