Simplify global variable definitions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,7 +26,6 @@ export(ggplot)
 export(glimpse)
 export(inferno)
 export(interestingGroups)
-export(labelSep)
 export(lanePattern)
 export(magma)
 export(metadata)
@@ -175,8 +174,10 @@ importFrom(basejump,sampleData)
 importFrom(basejump,sampleNames)
 importFrom(basejump,sanitizeSampleData)
 importFrom(basejump,selectSamples)
+importFrom(basejump,separatorBar)
 importFrom(basejump,snake)
 importFrom(basejump,uniteInterestingGroups)
+importFrom(basejump,updateMessage)
 importFrom(dendsort,dendsort)
 importFrom(dplyr,arrange)
 importFrom(dplyr,everything)
