--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -41,7 +41,6 @@ Depends:
     basejump (>= 0.7)
 Imports:
     assertive.base,
-    assertive.data,
     assertive.files,
     assertive.numbers,
     assertive.properties,
@@ -49,33 +48,22 @@ Imports:
     assertive.strings,
     assertive.types,
     Biostrings,
-    dendsort (>= 0.3),
     dplyr (>= 0.7),
-    GenomeInfoDb,
-    GenomicRanges,
     ggplot2 (>= 3.0),
     ggrepel (>= 0.7),
-    grDevices,
     grid,
-    IRanges,
-    knitr (>= 1.20),
     magrittr (>= 1.5),
     methods,
-    pheatmap (>= 1.0.10),
     plyr (>= 1.8),
-    RColorBrewer (>= 1.1),
     rdrop2 (>= 0.8),
     readr (>= 1.1),
     rlang (>= 0.2),
     S4Vectors,
-    scales,
-    sessioninfo (>= 1.0),
     stats,
     stringr (>= 1.3),
     tibble (>= 1.4),
     tidyr (>= 0.8),
-    utils,
-    viridis (>= 0.5)
+    utils
 Suggests:
     testthat (>= 2.0)
 Remotes:
