Migrate `prepareTemplate()` to basejump for long-term stability

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -91,6 +91,7 @@ importFrom(basejump,gene2symbol)
 importFrom(basejump,interestingGroups)
 importFrom(basejump,localOrRemoteFile)
 importFrom(basejump,makeNames)
+importFrom(basejump,prepareTemplate)
 importFrom(basejump,readFileByExtension)
 importFrom(basejump,readYAML)
 importFrom(basejump,removeNA)
