Migrate `lanePattern` to basejump but keep as reexport

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -89,6 +89,7 @@ importFrom(basejump,convertGenesToSymbols)
 importFrom(basejump,fixNA)
 importFrom(basejump,gene2symbol)
 importFrom(basejump,interestingGroups)
+importFrom(basejump,lanePattern)
 importFrom(basejump,localOrRemoteFile)
 importFrom(basejump,makeNames)
 importFrom(basejump,prepareTemplate)
