Export `projectDir()` utility function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,6 +33,7 @@ export(prepareSampleData)
 export(prepareSampleMetadata)
 export(prepareSummarizedExperiment)
 export(prepareTemplate)
+export(projectDir)
 export(projectDirPattern)
 export(pull)
 export(readDataVersions)
