Import `assertAllAreValidNames()` into NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -82,6 +82,7 @@ importFrom(assertive.types,assert_is_function)
 importFrom(assertive.types,assert_is_list)
 importFrom(basejump,"interestingGroups<-")
 importFrom(basejump,"sampleData<-")
+importFrom(basejump,assertAllAreValidNames)
 importFrom(basejump,assertFormalInterestingGroups)
 importFrom(basejump,assertIsAnImplicitInteger)
 importFrom(basejump,assertIsTx2gene)
