--- a/NAMESPACE
+++ b/NAMESPACE
@@ -126,6 +126,7 @@ importFrom(ggrepel,geom_label_repel)
 importFrom(grid,arrow)
 importFrom(grid,unit)
 importFrom(magrittr,"%>%")
+importFrom(magrittr,set_colnames)
 importFrom(magrittr,set_rownames)
 importFrom(methods,as)
 importFrom(methods,is)
