--- a/NAMESPACE
+++ b/NAMESPACE
@@ -78,6 +78,7 @@ importFrom(assertive.types,assert_is_a_string)
 importFrom(assertive.types,assert_is_an_integer)
 importFrom(assertive.types,assert_is_any_of)
 importFrom(assertive.types,assert_is_character)
+importFrom(assertive.types,assert_is_data.frame)
 importFrom(assertive.types,assert_is_function)
 importFrom(assertive.types,assert_is_list)
 importFrom(basejump,"interestingGroups<-")
