--- a/NAMESPACE
+++ b/NAMESPACE
@@ -62,6 +62,7 @@ importFrom(Biostrings,reverseComplement)
 importFrom(S4Vectors,aggregate)
 importFrom(S4Vectors,as.data.frame)
 importFrom(S4Vectors,merge)
+importFrom(S4Vectors,tail)
 importFrom(assertive.base,assert_are_identical)
 importFrom(assertive.files,assert_all_are_dirs)
 importFrom(assertive.files,assert_all_are_existing_files)
@@ -96,6 +97,7 @@ importFrom(basejump,lanePattern)
 importFrom(basejump,localOrRemoteFile)
 importFrom(basejump,makeNames)
 importFrom(basejump,prepareTemplate)
+importFrom(basejump,printString)
 importFrom(basejump,readFileByExtension)
 importFrom(basejump,readYAML)
 importFrom(basejump,removeNA)
