--- a/NAMESPACE
+++ b/NAMESPACE
@@ -59,6 +59,7 @@ export(tibble)
 export(uniteInterestingGroups)
 export(updateMessage)
 importFrom(Biostrings,reverseComplement)
+importFrom(S4Vectors,DataFrame)
 importFrom(S4Vectors,aggregate)
 importFrom(S4Vectors,as.data.frame)
 importFrom(S4Vectors,merge)
