--- a/NAMESPACE
+++ b/NAMESPACE
@@ -61,7 +61,6 @@ export(updateMessage)
 importFrom(Biostrings,reverseComplement)
 importFrom(S4Vectors,DataFrame)
 importFrom(S4Vectors,aggregate)
-importFrom(S4Vectors,as.data.frame)
 importFrom(S4Vectors,merge)
 importFrom(S4Vectors,tail)
 importFrom(assertive.base,assert_are_identical)
@@ -80,13 +79,14 @@ importFrom(assertive.types,assert_is_a_string)
 importFrom(assertive.types,assert_is_an_integer)
 importFrom(assertive.types,assert_is_any_of)
 importFrom(assertive.types,assert_is_character)
-importFrom(assertive.types,assert_is_data.frame)
 importFrom(assertive.types,assert_is_function)
 importFrom(assertive.types,assert_is_list)
+importFrom(assertive.types,assert_is_tbl_df)
 importFrom(basejump,"interestingGroups<-")
 importFrom(basejump,"sampleData<-")
 importFrom(basejump,assertAllAreValidNames)
 importFrom(basejump,assertFormalInterestingGroups)
+importFrom(basejump,assertHasRownames)
 importFrom(basejump,assertIsAnImplicitInteger)
 importFrom(basejump,assertIsTx2gene)
 importFrom(basejump,camel)
@@ -158,3 +158,5 @@ importFrom(tibble,rownames_to_column)
 importFrom(tibble,tibble)
 importFrom(tidyr,expand)
 importFrom(utils,globalVariables)
+importMethodsFrom(S4Vectors,coerce)
+importMethodsFrom(basejump,coerce)
