--- a/NAMESPACE
+++ b/NAMESPACE
@@ -79,6 +79,7 @@ importFrom(assertive.types,assert_is_a_string)
 importFrom(assertive.types,assert_is_an_integer)
 importFrom(assertive.types,assert_is_any_of)
 importFrom(assertive.types,assert_is_character)
+importFrom(assertive.types,assert_is_data.frame)
 importFrom(assertive.types,assert_is_function)
 importFrom(assertive.types,assert_is_list)
 importFrom(assertive.types,assert_is_tbl_df)
@@ -91,7 +92,6 @@ importFrom(basejump,assertIsAnImplicitInteger)
 importFrom(basejump,assertIsTx2gene)
 importFrom(basejump,camel)
 importFrom(basejump,convertGenesToSymbols)
-importFrom(basejump,fixNA)
 importFrom(basejump,gene2symbol)
 importFrom(basejump,interestingGroups)
 importFrom(basejump,lanePattern)
@@ -104,6 +104,7 @@ importFrom(basejump,readYAML)
 importFrom(basejump,removeNA)
 importFrom(basejump,sampleData)
 importFrom(basejump,sampleNames)
+importFrom(basejump,sanitizeNA)
 importFrom(basejump,sanitizeSampleData)
 importFrom(basejump,selectSamples)
 importFrom(basejump,separatorBar)
