Improve handling and sanitization of `NULL` items in YAML (e.g. "batch")

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -70,7 +70,9 @@ importFrom(assertive.numbers,assert_all_are_in_range)
 importFrom(assertive.numbers,assert_all_are_positive)
 importFrom(assertive.properties,assert_has_dimnames)
 importFrom(assertive.properties,assert_has_no_duplicates)
+importFrom(assertive.properties,assert_is_atomic)
 importFrom(assertive.properties,assert_is_non_empty)
+importFrom(assertive.properties,assert_is_scalar)
 importFrom(assertive.sets,assert_are_disjoint_sets)
 importFrom(assertive.sets,assert_is_subset)
 importFrom(assertive.strings,assert_all_are_matching_regex)
@@ -82,6 +84,7 @@ importFrom(assertive.types,assert_is_character)
 importFrom(assertive.types,assert_is_data.frame)
 importFrom(assertive.types,assert_is_function)
 importFrom(assertive.types,assert_is_list)
+importFrom(assertive.types,assert_is_matrix)
 importFrom(assertive.types,assert_is_tbl_df)
 importFrom(basejump,"interestingGroups<-")
 importFrom(basejump,"sampleData<-")
