--- a/NAMESPACE
+++ b/NAMESPACE
@@ -77,6 +77,7 @@ importFrom(assertive.sets,assert_are_disjoint_sets)
 importFrom(assertive.sets,assert_is_subset)
 importFrom(assertive.strings,assert_all_are_matching_regex)
 importFrom(assertive.strings,assert_all_are_non_missing_nor_empty_character)
+importFrom(assertive.types,assert_is_a_number)
 importFrom(assertive.types,assert_is_a_string)
 importFrom(assertive.types,assert_is_an_integer)
 importFrom(assertive.types,assert_is_any_of)
