Update `readTx2gene()` to return a `tx2gene` object

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -49,6 +49,7 @@ export(separatorBar)
 export(tibble)
 export(uniteInterestingGroups)
 export(updateMessage)
+importClassesFrom(basejump,tx2gene)
 importFrom(Biostrings,reverseComplement)
 importFrom(S4Vectors,DataFrame)
 importFrom(S4Vectors,aggregate)
