--- a/NAMESPACE
+++ b/NAMESPACE
@@ -73,6 +73,10 @@ importFrom(basejump,assertAllAreValidNames)
 importFrom(basejump,assertFormalInterestingGroups)
 importFrom(basejump,assertHasRownames)
 importFrom(basejump,assertIsAnImplicitInteger)
+importFrom(basejump,basejump_geom_abline)
+importFrom(basejump,basejump_geom_label_average)
+importFrom(basejump,basejump_geom_label_repel)
+importFrom(basejump,bcbio_geom_label)
 importFrom(basejump,camel)
 importFrom(basejump,convertGenesToSymbols)
 importFrom(basejump,gene2symbol)
@@ -80,6 +84,7 @@ importFrom(basejump,interestingGroups)
 importFrom(basejump,lanePattern)
 importFrom(basejump,localOrRemoteFile)
 importFrom(basejump,makeNames)
+importFrom(basejump,makeSummarizedExperiment)
 importFrom(basejump,prepareTemplate)
 importFrom(basejump,printString)
 importFrom(basejump,readFileByExtension)
@@ -108,6 +113,7 @@ importFrom(magrittr,"%>%")
 importFrom(magrittr,set_colnames)
 importFrom(methods,as)
 importFrom(methods,is)
+importFrom(methods,new)
 importFrom(plyr,ldply)
 importFrom(rdrop2,drop_acc)
 importFrom(rdrop2,drop_auth)
