--- a/NAMESPACE
+++ b/NAMESPACE
@@ -74,9 +74,9 @@ importFrom(basejump,assertFormalInterestingGroups)
 importFrom(basejump,assertHasRownames)
 importFrom(basejump,assertIsAnImplicitInteger)
 importFrom(basejump,basejump_geom_abline)
+importFrom(basejump,basejump_geom_label)
 importFrom(basejump,basejump_geom_label_average)
 importFrom(basejump,basejump_geom_label_repel)
-importFrom(basejump,bcbio_geom_label)
 importFrom(basejump,camel)
 importFrom(basejump,convertGenesToSymbols)
 importFrom(basejump,gene2symbol)
