Improve the language here by using `basejump::import()`

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -80,6 +80,7 @@ importFrom(basejump,basejump_geom_label_repel)
 importFrom(basejump,camel)
 importFrom(basejump,convertGenesToSymbols)
 importFrom(basejump,gene2symbol)
+importFrom(basejump,import)
 importFrom(basejump,interestingGroups)
 importFrom(basejump,lanePattern)
 importFrom(basejump,localOrRemoteFile)
@@ -87,7 +88,6 @@ importFrom(basejump,makeNames)
 importFrom(basejump,makeSummarizedExperiment)
 importFrom(basejump,prepareTemplate)
 importFrom(basejump,printString)
-importFrom(basejump,readFileByExtension)
 importFrom(basejump,readYAML)
 importFrom(basejump,removeNA)
 importFrom(basejump,sampleData)
