Consistently use `as_tibble()`

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -62,6 +62,7 @@ importFrom(assertive.sets,assert_is_subset)
 importFrom(assertive.strings,assert_all_are_matching_regex)
 importFrom(assertive.strings,assert_all_are_non_missing_nor_empty_character)
 importFrom(assertive.types,assert_is_a_string)
+importFrom(assertive.types,assert_is_all_of)
 importFrom(assertive.types,assert_is_any_of)
 importFrom(assertive.types,assert_is_character)
 importFrom(assertive.types,assert_is_list)
@@ -131,6 +132,7 @@ importFrom(rlang,sym)
 importFrom(rlang,syms)
 importFrom(stringr,str_pad)
 importFrom(stringr,str_trunc)
+importFrom(tibble,as_tibble)
 importFrom(tibble,tibble)
 importFrom(tidyr,expand)
 importFrom(utils,globalVariables)
