--- a/NAMESPACE
+++ b/NAMESPACE
@@ -87,6 +87,7 @@ importFrom(basejump,lanePattern)
 importFrom(basejump,localOrRemoteFile)
 importFrom(basejump,makeNames)
 importFrom(basejump,makeSummarizedExperiment)
+importFrom(basejump,minimalSampleData)
 importFrom(basejump,prepareTemplate)
 importFrom(basejump,printString)
 importFrom(basejump,readYAML)
