Add getFromCommands family of functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,9 @@ export(checkInterestingGroups)
 export(convertGenesToSymbols)
 export(copyToDropbox)
 export(gene2symbol)
+export(getBarcodeCutoffFromCommands)
+export(getLevelFromCommands)
+export(getUMITypeFromCommands)
 export(interestingGroups)
 export(lanePattern)
 export(metadataBlacklist)
