--- a/NAMESPACE
+++ b/NAMESPACE
@@ -64,6 +64,7 @@ importFrom(assertive.sets,assert_are_disjoint_sets)
 importFrom(assertive.sets,assert_is_subset)
 importFrom(assertive.strings,assert_all_are_matching_regex)
 importFrom(assertive.strings,assert_all_are_non_missing_nor_empty_character)
+importFrom(assertive.strings,assert_any_are_matching_regex)
 importFrom(assertive.types,assert_is_a_string)
 importFrom(assertive.types,assert_is_all_of)
 importFrom(assertive.types,assert_is_any_of)
