Switch to using `bcbioBaseCacheURL` consistently

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export("sampleData<-")
 export("sampleMetadata<-")
 export(assertFormalAnnotationCol)
 export(assertFormalInterestingGroups)
+export(bcbioBaseCacheURL)
 export(bcbio_geom_abline)
 export(bcbio_geom_label)
 export(bcbio_geom_label_average)
