--- a/NAMESPACE
+++ b/NAMESPACE
@@ -136,7 +136,9 @@ importFrom(rlang,"!!!")
 importFrom(rlang,"!!")
 importFrom(rlang,sym)
 importFrom(rlang,syms)
+importFrom(stringr,str_match)
 importFrom(stringr,str_pad)
+importFrom(stringr,str_replace)
 importFrom(stringr,str_trunc)
 importFrom(tibble,as_tibble)
 importFrom(tibble,tibble)
