--- a/NAMESPACE
+++ b/NAMESPACE
@@ -68,6 +68,7 @@ importFrom(assertive.strings,assert_all_are_non_missing_nor_empty_character)
 importFrom(assertive.strings,assert_any_are_matching_regex)
 importFrom(assertive.types,assert_is_a_string)
 importFrom(assertive.types,assert_is_all_of)
+importFrom(assertive.types,assert_is_an_integer)
 importFrom(assertive.types,assert_is_any_of)
 importFrom(assertive.types,assert_is_character)
 importFrom(assertive.types,assert_is_list)
