Use `rlang::has_length()`

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -96,7 +96,6 @@ importFrom(basejump,makeSummarizedExperiment)
 importFrom(basejump,minimalSampleData)
 importFrom(basejump,prepareTemplate)
 importFrom(basejump,printString)
-importFrom(basejump,readYAML)
 importFrom(basejump,removeNA)
 importFrom(basejump,sampleData)
 importFrom(basejump,sampleNames)
@@ -135,6 +134,7 @@ importFrom(readr,read_csv)
 importFrom(readr,read_lines)
 importFrom(rlang,"!!!")
 importFrom(rlang,"!!")
+importFrom(rlang,has_length)
 importFrom(rlang,sym)
 importFrom(rlang,syms)
 importFrom(stringr,str_match)
