--- a/NAMESPACE
+++ b/NAMESPACE
@@ -51,6 +51,7 @@ export(updateMessage)
 importClassesFrom(basejump,tx2gene)
 importFrom(Biostrings,reverseComplement)
 importFrom(S4Vectors,DataFrame)
+importFrom(S4Vectors,na.omit)
 importFrom(S4Vectors,tail)
 importFrom(assertive.base,assert_are_identical)
 importFrom(assertive.files,assert_all_are_dirs)
