--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,9 +14,9 @@ export(checkInterestingGroups)
 export(convertGenesToSymbols)
 export(copyToDropbox)
 export(gene2symbol)
-export(getBarcodeCutoffFromCommands)
-export(getLevelFromCommands)
-export(getUMITypeFromCommands)
+export(getBarcodeCutoffFromCommandsLog)
+export(getLevelFromCommandsLog)
+export(getUMITypeFromCommandsLog)
 export(interestingGroups)
 export(lanePattern)
 export(metadataBlacklist)
